<resources>
    <string name="app_name">EventAppointment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="events">Events</string>
    <string name="unregister">Unregister</string>
    <string name="event">Event</string>
    <string name="event_registered_message">You are registered for this event</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="credentials_client_id" translatable="false">123032725145-9lpacclpi7ialrnfr14f496hggrn35n8.apps.googleusercontent.com</string>
</resources>